...

        <FrameLayout android:background="?attr/alarmCardBackdrop"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:layout_marginLeft="6dp" android:layout_marginRight="6dp">

        <com.forrestguice.support.constraint.ConstraintLayout
            android:id="@+id/layout_alarmcard"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:paddingTop="4dp" android:paddingBottom="8dp"
            android:background="@drawable/card_alarmitem_enabled_dark0"
            android:orientation="horizontal" android:descendantFocusability="blocksDescendants">

            <com.forrestguice.support.constraint.Guideline
...
                <Button android:id="@+id/button_snooze"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp" android:layout_marginRight="4dp"
                    android:drawableStart="?attr/icActionSnooze" android:drawableLeft="?attr/icActionSnooze" android:drawablePadding="2dp"
                    android:scaleX="0.92" android:scaleY="0.92"
                    android:text="@string/alarmAction_snooze" />

                <Button android:id="@+id/button_dismiss"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:drawableStart="?attr/icActionDismiss" android:drawableLeft="?attr/icActionDismiss" android:drawablePadding="2dp"
                    android:scaleX="0.92" android:scaleY="0.92"
                    android:text="@string/alarmAction_dismiss" />

                <View android:background="@null" android:layout_height="1dp" android:layout_width="0dp" android:layout_weight="1" />

                <com.forrestguice.support.widget.ImageButton android:id="@+id/button_delete"
                    android:layout_width="48dp" android:layout_height="48dp"
                    android:contentDescription="@string/alarms_action_deleteAlarm"
                    style="@style/ActionButton"
                    android:src="?attr/icActionDelete" />

                <com.forrestguice.support.widget.ImageButton
                    android:id="@+id/overflow_menu" android:visibility="gone"
                    android:layout_width="48dp" android:layout_height="48dp"
...
