...

		<com.forrestguice.support.widget.FloatingActionButton
			android:id="@+id/btn_deselect" android:visibility="visible"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:layout_gravity="bottom|start" android:layout_margin="8dp"
			android:src="?attr/icActionDeselect" android:scaleType="center"
			android:contentDescription="@string/action_deselect"
			android:tint="?attr/fab_foregroundColorAlt"
			app:backgroundTint="?attr/fab_backgroundColorAlt" app:rippleColor="?attr/fab_rippleColorAlt"
			app:shapeAppearance="?attr/fab_shapeOverlayAlt"
			app:fabSize="mini"
			app:layout_dodgeInsetEdges="bottom"
			android:nextFocusUp="@+id/listFragment"
...

	<com.forrestguice.support.widget.FloatingActionButton
		android:id="@+id/btn_add"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:layout_gravity="bottom|end" android:layout_margin="16dp"
		android:src="?attr/icActionNew" android:scaleType="center"
		android:contentDescription="@string/alarms_action_addAlarm"
		android:tint="?attr/fab_foregroundColor"
		app:backgroundTint="?attr/fab_backgroundColor" app:rippleColor="?attr/fab_rippleColor"
		app:shapeAppearance="?attr/fab_shapeOverlay"
		app:layout_dodgeInsetEdges="bottom"
		android:focusedByDefault="true"
		android:nextFocusUp="@+id/listFragment"
...
