...
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toTopOf="parent">

			<com.forrestguice.support.widget.Toolbar
				android:id="@+id/app_menubar" style="?attr/toolbarTheme"
				app:title="@string/bedtime_label" />

		</com.forrestguice.support.widget.AppBarLayout>

		<LinearLayout android:id="@+id/fragmentContainer"
			android:layout_width="0dp" android:layout_height="0dp"
			android:orientation="vertical"
...
